--- a/src/scss/molecules/slidetime.scss
+++ b/src/scss/molecules/slidetime.scss
@@ -1,6 +1,6 @@
 .slidetime {
   position: absolute;
-  bottom: -50px;
+  bottom: -30px;
   left: 0%;
   right: 0;
   margin: auto;
@@ -20,6 +20,14 @@
     animation-duration: 12000ms;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
+  }
+
+  .counter {
+    position: absolute;
+    right: 0;
+    top: 5px;
+    color: #808080;
+    font-family: 'Roboto', sans-serif;
   }
 }
 
