--- a/src/scss/atoms/cursor.scss
+++ b/src/scss/atoms/cursor.scss
@@ -1,26 +1,5 @@
-#cursor,
 #follower {
-  border-radius: 50%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  pointer-events: none;
-  transform: translate3d(-50%, -50%, 0);
-}
-
-#cursor {
-  width: 8px;
-  height: 8px;
-  background-color: #fff;
-  z-index: 1001;
-  transition: 0.5s;
-  &.is-active-profile {
-    opacity: 0;
-  }
-}
-
-#follower {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   width: 40px;
@@ -29,6 +8,17 @@
   transition: transform ease 0.3s;
   text-align: center;
   border: 1px solid #fff;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  transform: translate3d(-50%, -50%, 0);
+
+  @include mq-up(sm) {
+    display: flex;
+  }
+
   span {
     display: inline-block;
     font-size: 14px;
@@ -36,10 +26,15 @@
     transform: scale(0);
   }
   &.is-active {
-    transform: scale(2);
+    transform: scale(2) translate3d(-50%, -50%, 0);
+    background-color: rgba(255, 255, 255, 0.2);
   }
   &.is-active-profile {
     transform: scale(2) translate3d(-50%, -50%, 0);
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+  &.is-active-menuicon {
+    transform: scale(2) translate3d(-50%, 0, 0);
     background-color: rgba(255, 255, 255, 0.2);
   }
 }
