--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,12 @@
+@import './variable/breakpoint';
 @import './base/reset';
 @import './base/font';
 @import './atoms/cursor';
 @import './atoms/triangle';
+@import './atoms/menuIcon';
 @import './molecules/logo';
 @import './molecules/slidetime';
+@import './molecules/sidebar';
 
 body {
   background-color: #000;
@@ -14,6 +17,11 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
+  transition: 0.2s;
+
+  &.blur {
+    filter: blur(5px);
+  }
 }
 
 .slidewrap {
@@ -21,13 +29,18 @@ body {
 }
 
 .frame {
-  width: calc(100vw - 180px);
-  height: calc((100vw - 180px) * 0.5625);
+  width: 100vw;
+  height: calc(100vw * 0.5625);
   max-width: 1200px;
   max-height: calc(1200px * 0.5625);
   box-sizing: border-box;
   overflow: hidden;
   position: relative;
+
+  @include mq-up(sm) {
+    width: calc(100vw - 180px);
+    height: calc((100vw - 180px) * 0.5625);
+  }
 
   img {
     width: 100%;
@@ -43,4 +56,21 @@ body {
       z-index: 10;
     }
   }
+}
+
+.avatar {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  overflow: hidden;
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
