--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,7 @@
 @import './atoms/cursor';
 @import './atoms/triangle';
 @import './atoms/menuIcon';
+@import './atoms/loading';
 @import './molecules/logo';
 @import './molecules/slidetime';
 @import './molecules/sidebar';
