--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 @import './molecules/logo';
 @import './molecules/slidetime';
 @import './molecules/sidebar';
+@import './pages/gallery';
 
 body {
   background-color: #000;
@@ -79,4 +80,31 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.more-photo {
+  color: #fff;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  text-decoration: none;
+  padding-right: 80px;
+  &::before {
+    content: '';
+    width: 60px;
+    height: 1px;
+    background-color: #fff;
+    position: absolute;
+    right: 10px;
+    bottom: 3px;
+  }
+  .arrow {
+    position: absolute;
+    right: 0;
+    bottom: 3px;
+    border-top: 3px solid transparent;
+    border-right: 15px solid transparent;
+    border-bottom: 3px solid #fff;
+    border-left: 15px solid#fff;
+  }
 }
