--- a/src/scss/molecules/slidetime.scss
+++ b/src/scss/molecules/slidetime.scss
@@ -6,12 +6,12 @@
   margin: auto;
   width: 80%;
   height: 1px;
-  background-color: #888;
+  background-color: $text;
 
   .progressbar {
     width: 0;
     height: 4px;
-    background-color: #808080;
+    background-color: $text;
     display: block;
     position: absolute;
     top: -2px;
@@ -22,7 +22,7 @@
     position: absolute;
     right: 0;
     top: 5px;
-    color: #808080;
+    color: $text;
     font-family: 'Roboto', sans-serif;
     font-size: 12px;
 
