--- a/src/scss/atoms/menuIcon.scss
+++ b/src/scss/atoms/menuIcon.scss
@@ -4,30 +4,33 @@
   right: 20px;
   width: 40px;
   height: 40px;
-  opacity: 0.8;
   z-index: 101;
   &:hover {
     cursor: pointer;
+    &::before,
+    &::after {
+      background-color: $link-hover;
+    }
+  }
+  &::before,
+  &::after {
+    display: block;
+    position: absolute;
+    transition: 0.2s;
+    background-color: $text;
+    height: 2px;
   }
   &::before {
     content: '';
-    position: absolute;
-    top: 10px;
+    top: 12px;
     right: 0;
-    display: block;
-    width: 100%;
-    height: 2px;
-    background-color: #fff;
+    width: 90%;
   }
   &::after {
     content: '';
-    position: absolute;
     top: 25px;
     right: 0;
-    display: block;
     width: 65%;
-    height: 2px;
-    background-color: #fff;
   }
   .menu-text {
     clip: rect(1px, 1px, 1px, 1px);
