--- a/src/scss/molecules/sidebar.scss
+++ b/src/scss/molecules/sidebar.scss
@@ -5,12 +5,13 @@
   width: 100%;
   height: 100%;
   padding: 75px 8px;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.9);
   z-index: 100;
   color: #fff;
   box-sizing: border-box;
   transition: 0.4s;
   transform: translate3d(0, 0, 0);
+  overflow: scroll;
 
   @include mq-up(sm) {
     right: -400px;
@@ -27,12 +28,45 @@
     line-height: 1.7;
   }
 
-  a {
-    display: inline-block;
-    padding: 8px 16px;
-    border: 1px solid #fff;
-    border-radius: 4px;
-    color: #fff;
-    text-decoration: none;
+  .about {
+    a {
+      display: inline-block;
+      padding: 8px 16px;
+      border: 1px solid #fff;
+      border-radius: 4px;
+      color: #fff;
+      text-decoration: none;
+    }
+  }
+
+  .sitemap-title {
+    font-size: 18px;
+  }
+
+  .nav {
+    margin: 0;
+    padding: 0 16px;
+    list-style: none;
+
+    li {
+      margin: 16px 0 0;
+    }
+    a {
+      color: #fff;
+      text-decoration: none;
+    }
+  }
+}
+
+.sidebar-back {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+  &.open {
+    display: block;
   }
 }
