--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,5 @@
 @import './variable/breakpoint';
+@import './variable/color';
 @import './base/reset';
 @import './base/font';
 @import './atoms/cursor';
@@ -14,16 +15,31 @@ body {
   background-color: #000;
 }
 
+.site-title {
+  position: fixed;
+  top: 30px;
+  left: 30px;
+  margin: 0;
+  color: $text;
+  font-weight: normal;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  z-index: 101;
+}
+
+.content {
+  transition: 0.2s;
+  &.blur {
+    filter: blur(5px);
+  }
+}
+
 .main {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
   transition: 0.2s;
-
-  &.blur {
-    filter: blur(5px);
-  }
 }
 
 .slidewrap {
@@ -83,17 +99,23 @@ body {
 }
 
 .more-photo {
-  color: #fff;
+  color: $text;
   position: fixed;
   right: 20px;
   bottom: 20px;
   text-decoration: none;
   padding-right: 80px;
+  font-family: 'Montserrat', sans-serif;
+  transition: 0.2s;
+  font-size: 14px;
+  &:hover {
+    color: $link-hover;
+  }
   &::before {
     content: '';
     width: 60px;
     height: 1px;
-    background-color: #fff;
+    background-color: currentColor;
     position: absolute;
     right: 10px;
     bottom: 3px;
@@ -104,7 +126,7 @@ body {
     bottom: 3px;
     border-top: 3px solid transparent;
     border-right: 15px solid transparent;
-    border-bottom: 3px solid #fff;
-    border-left: 15px solid#fff;
+    border-bottom: 3px solid currentColor;
+    border-left: 15px solid currentColor;
   }
 }
