--- a/src/scss/molecules/sidebar.scss
+++ b/src/scss/molecules/sidebar.scss
@@ -7,7 +7,7 @@
   padding: 75px 8px;
   background-color: rgba(0, 0, 0, 0.9);
   z-index: 100;
-  color: #fff;
+  color: $text;
   box-sizing: border-box;
   transition: 0.4s;
   transform: translate3d(0, 0, 0);
@@ -29,12 +29,15 @@
   }
 
   .about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     a {
       display: inline-block;
       padding: 8px 16px;
-      border: 1px solid #fff;
+      border: 1px solid $text;
       border-radius: 4px;
-      color: #fff;
+      color: $text;
       text-decoration: none;
     }
   }
@@ -52,7 +55,7 @@
       margin: 16px 0 0;
     }
     a {
-      color: #fff;
+      color: $text;
       text-decoration: none;
     }
   }
