--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,127 +6,17 @@
 @import './atoms/triangle';
 @import './atoms/menuIcon';
 @import './atoms/loading';
+@import './atoms/avatar';
+@import './atoms/site-title';
 @import './molecules/logo';
 @import './molecules/slidetime';
 @import './molecules/sidebar';
+@import './molecules/more';
+@import './molecules/frame';
+@import './organisms/content';
+@import './pages/top';
 @import './pages/gallery';
 
 body {
-  background-color: #000;
-}
-
-.site-title {
-  position: fixed;
-  top: 30px;
-  left: 30px;
-  margin: 0;
-  color: $text;
-  font-weight: normal;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 18px;
-  z-index: 101;
-}
-
-.content {
-  transition: 0.2s;
-  &.blur {
-    filter: blur(5px);
-  }
-}
-
-.main {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  transition: 0.2s;
-}
-
-.slidewrap {
-  position: relative;
-}
-
-.frame {
-  width: 100vw;
-  height: calc(100vw * 0.5625);
-  max-width: 1200px;
-  max-height: calc(1200px * 0.5625);
-  box-sizing: border-box;
-  overflow: hidden;
-  position: relative;
-
-  @include mq-up(sm) {
-    width: calc(100vw - 40px);
-    height: calc((100vw - 40px) * 0.5625);
-  }
-
-  @include mq-up(lg) {
-    width: calc(100vw - 180px);
-    height: calc((100vw - 180px) * 0.5625);
-  }
-
-  img {
-    width: 100%;
-    height: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate3d(-50%, -50%, 0);
-    transition: opacity 1s ease;
-    opacity: 0;
-    &.show {
-      opacity: 1;
-      z-index: 10;
-    }
-  }
-}
-
-.avatar {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  overflow: hidden;
-  img {
-    width: 100%;
-    height: auto;
-  }
-}
-
-.about {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.more-photo {
-  color: $text;
-  position: fixed;
-  right: 20px;
-  bottom: 20px;
-  text-decoration: none;
-  padding-right: 80px;
-  font-family: 'Montserrat', sans-serif;
-  transition: 0.2s;
-  font-size: 14px;
-  &:hover {
-    color: $link-hover;
-  }
-  &::before {
-    content: '';
-    width: 60px;
-    height: 1px;
-    background-color: currentColor;
-    position: absolute;
-    right: 10px;
-    bottom: 3px;
-  }
-  .arrow {
-    position: absolute;
-    right: 0;
-    bottom: 3px;
-    border-top: 3px solid transparent;
-    border-right: 15px solid transparent;
-    border-bottom: 3px solid currentColor;
-    border-left: 15px solid currentColor;
-  }
+  background-color: $bg;
 }
