--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,6 +17,6 @@
 @import './pages/top';
 @import './pages/gallery';
 
-body {
-  background-color: $bg;
-}
+// body {
+//   background-color: $bg;
+// }
