--- a/src/scss/page/page-triangle-loading.scss
+++ b/src/scss/page/page-triangle-loading.scss
@@ -1,5 +1,5 @@
 .page-triangle-loading {
-  background-color: #000;
+  background-color: #fff;
   main {
     display: flex;
     align-items: center;
@@ -12,12 +12,13 @@
     height: 100px;
     position: absolute;
     position: relative;
+    background-color: #ccc;
 
     &::before {
       display: block;
       position: absolute;
       content: '';
-      background: #fff;
+      background: currentColor;
       clip-path: polygon(0 0, 100% 0, 0 100%);
       top: 50%;
       left: 50%;
@@ -28,7 +29,8 @@
       animation-duration: 1.5s;
       animation-timing-function: linear;
       animation-iteration-count: infinite;
-      animation-name: animation;
+      // animation-name: animation;
+      transform: rotateZ(-135deg) rotateY(-180deg) rotateX(0deg);
     }
   }
 
