--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,3 +6,4 @@
 @import './page/page-triangle-loading';
 @import './page/page-image-filter';
 @import './page/page-text-animation';
+@import './page//page-ball.scss';
